# VSCodeCPPDevEnvTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Game.h  GameConfig.h  GameStage.h  LoadingPage.h
include/basic/: SDL_FontCache.h  Text.h  basic.h
include/entity/: Cell.h  CellChunk.h
include/ui/: ProgressBar.h  TextRender.h
include/utils/: DrawUtils.h  GridCoordinateConverterUtils.h  MapGenerator.h
include/widget/: DebugInfoBox.h  MiniMap.h
src/: Game.cpp  GameStage.cpp  LoadingPage.cpp
src/basic/: Text.cpp
src/entity/: Cell.cpp  CellChunk.cpp
src/ui/: ProgressBar.cpp  TextRender.cpp
src/utils/: DrawUtils.cpp  GridCoordinateConverterUtils.cpp  MapGenerator.cpp
src/widget/: DebugInfoBox.cpp
